--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -5,7 +5,7 @@
     <h1>Contact Information</h1>
 
     <ul>
-        <li><b>Mail: </b>{{ email }}</li>
+        <li><b>Email: </b>{{ email }}</li>
         <li><b>Adress: </b>{{ adress }}</li>
         <li><b>Phone Number: </b>{{ phone }}</li>
     </ul>
