--- a/pages/templates/products/show.html
+++ b/pages/templates/products/show.html
@@ -14,6 +14,10 @@
                 <h5 class="card-title" style="color: rgb(196, 50, 50);">{{ product.name }}</h5>
                 {% else %}
                 <h5 class="card-title">{{ product.name }}</h5>
+                {% if product.price > 2000 %} 
+                <p class="card-text" style="color: red;">{{product.price}}</p> 
+                {% else %} 
+                <p class="card-text">{{product.price}}</p> 
                 {% endif %}
                 <p class="card-text">{{ product.description }}</p>
                 <p class="card-text"><b>Price: $</b>{{ product.price }}</p>
