--- a/pages/templates/pages/products/show.html
+++ b/pages/templates/pages/products/show.html
@@ -11,7 +11,7 @@
         <div class="col-md-8">
             <div class="card-body">
                 {% if product.price > 2000 %}
-                <p class="card-text" style="color: rgb(231, 33, 33);">{{product.price}}</p>
+                <p class="card-text" style="color: red;">{{product.price}}</p>
                 {% else %}
                 <p class="card-text">{{product.price}}</p>
                 {% endif %}
